src: clase boletin 4

--- a/src/Makefile
+++ b/src/Makefile
@@ -223,9 +223,12 @@ GDBPORT = $(shell expr `id -u` % 5000 + 25000)
 QEMUGDB = $(shell if $(QEMU) -help | grep -q '^-gdb'; \
 	then echo "-gdb tcp::$(GDBPORT)"; \
 	else echo "-s -p $(GDBPORT)"; fi)
+# He quitado un cpu a ver si no peta
 ifndef CPUS
-CPUS := 2
+CPUS := 1 
 endif
+# Hace que vaya más rápido para las operaciones con ficheros
+QEMUEXTRA=-snapshot
 QEMUOPTS = -drive file=fs.img,index=1,media=disk,format=raw -drive file=xv6.img,index=0,media=disk,format=raw -smp $(CPUS) -m 512 $(QEMUEXTRA)
 
 qemu: fs.img xv6.img
